		* If the deleted columns are being restored, restore the column pointers also in the histograms
		* Properly react in the histogram when data columns are deleted or renamed
		* Save/load the values format in xy-curve
		* React on text changes for values prefix and suffix and not on return pressed event in the curve properties explorer
		* Fix log scale axis for one tick and ln-scale typo
		* adjust the range format (numeric vs. datetime) also when the the column of the first curve is changed and not only when a new curve is added
		* simplified the naming of the initial axes for the default plot types (box blot with four axes,  etc.) - use "x" instead of "x axis 1", etc.
		* export to more image formats (jpg, bmp, ppm, xbm, xpm)
	* [spreadsheet]
		* show column statistics also for bigint columns
		* when selecting a column in the project explorer, make sure it becomes visible in the spreadsheet by scrolling horizontaly to its position
		* when removing or inserting rows in the spreadsheet, properly update the headers in the spreadsheet
	* [import]
		* Don't try to parse a netCDF file when the application was compiled without any support for netCDF, and similar for other formats
		* Show the last recently imported projects in a combobox also in ImportProjectDialog similar to how it's already done in ImportFileDialog
		* Don't show any error messages when the source file or local socket is empty when the import dialog is opened for the first time
	* Don't change the current selection in the Project Explorer when objects are being added or removed during undo or redo
	* Improved LaTeX support in export dialog and export of big spreadsheets
	* BUG 427190 - Fixed resetting parser error count on some platforms (Debian, Manjaro)
	* BUG 429110 - Support semicolon as function argument separator for locale with comma as decimal separator
	* BUG 429368 - Fix validation of custom model equation in fit dock
	* BUG 431535 - Save/Load value format